Change button border style, fix spacing

--- a/src/scss/component/_flexible.scss
+++ b/src/scss/component/_flexible.scss
@@ -228,4 +228,5 @@
 
 /* Call to action button*/
 .flex-cta {
+  border-radius: 0.25rem;
 }
